Full project update: fixed setup.sh, app.py, Dockerfile, etc.

--- a/docker-axolotl/Dockerfile
+++ b/docker-axolotl/Dockerfile
@@ -1,4 +1,4 @@
-# Use full CUDA development image (includes nvcc)
+# Use full CUDA development image
 FROM nvidia/cuda:12.1.1-cudnn8-devel-ubuntu22.04
 
 # Set environment variables
@@ -28,17 +28,20 @@ RUN ln -sf /usr/bin/python3.11 /usr/bin/python && \
     curl -sS https://bootstrap.pypa.io/get-pip.py | python
 
 # Set working directory
-WORKDIR /workspace
+WORKDIR /workspace/euthymion/docker-axolotl
 
-# Copy everything *after* setting the workdir
+# Copy project files
 COPY . .
 
-# Install dependencies
-RUN pip install --no-cache-dir -r requirements.txt && \
-    pip install ./exllamav2 --no-cache-dir
+# Install PyTorch and torchvision for CUDA 12.1
+RUN pip install --no-cache-dir torch torchvision --index-url https://download.pytorch.org/whl/cu121
 
-# Debug: show contents of /workspace
-RUN echo "Checking /workspace contents:" && ls -la /workspace
+# Install other dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install ./exllamav2 --no-cache-dir
+
+# Debug: show contents of /workspace/euthymion/docker-axolotl
+RUN echo "Checking /workspace/euthymion/docker-axolotl contents:" && ls -la /workspace/euthymion/docker-axolotl
 
 # Start FastAPI server
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
