Update Dockerfile and setup.sh for TGI and DinD

--- a/docker-axolotl/Dockerfile
+++ b/docker-axolotl/Dockerfile
@@ -1,27 +1,18 @@
-# Use full CUDA development image
+# Use CUDA base with cuDNN support
 FROM nvidia/cuda:12.1.1-cudnn8-devel-ubuntu22.04
 
-# Set environment variables
+# Required for noninteractive installs
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TORCH_CUDA_ARCH_LIST="8.0;8.6;8.9+PTX"
 ENV CUDA_HOME=/usr/local/cuda
 
-# Install base packages and Python 3.11
+# Install system deps including Docker for DinD
 RUN apt-get update && apt-get install -y \
-    git \
-    git-lfs \
-    curl \
-    wget \
-    ca-certificates \
-    software-properties-common \
-    build-essential \
-    ninja-build && \
-    add-apt-repository ppa:deadsnakes/ppa && \
-    apt-get update && apt-get install -y \
-    python3.11 \
-    python3.11-dev \
-    python3.11-distutils && \
-    rm -rf /var/lib/apt/lists/*
+    git git-lfs curl wget ca-certificates \
+    software-properties-common build-essential \
+    ninja-build docker.io \
+    python3.11 python3.11-dev python3.11-distutils \
+    && rm -rf /var/lib/apt/lists/*
 
 # Set Python 3.11 as default and install pip
 RUN ln -sf /usr/bin/python3.11 /usr/bin/python && \
@@ -30,18 +21,16 @@ RUN ln -sf /usr/bin/python3.11 /usr/bin/python && \
 # Set working directory
 WORKDIR /workspace/euthymion/docker-axolotl
 
-# Copy project files
+# Copy code
 COPY . .
 
-# Install PyTorch and torchvision for CUDA 12.1
-RUN pip install --no-cache-dir torch torchvision --index-url https://download.pytorch.org/whl/cu121
+# Install PyTorch (CUDA 12.1) and other dependencies
+RUN pip install --no-cache-dir torch torchvision --index-url https://download.pytorch.org/whl/cu121 && \
+    pip install --no-cache-dir -r requirements.txt && \
+    pip install ./exllamav2
 
-# Install other dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-RUN pip install ./exllamav2 --no-cache-dir
+# (Optional) Check that Docker CLI works inside
+RUN docker --version || echo "⚠️ Docker CLI not working — daemon must run externally."
 
-# Debug: show contents of /workspace/euthymion/docker-axolotl
-RUN echo "Checking /workspace/euthymion/docker-axolotl contents:" && ls -la /workspace/euthymion/docker-axolotl
-
-# Start FastAPI server
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
+# Default command (you'll override this when running with --entrypoint bash)
+CMD ["bash"]
