Add Dockerfile with conditional git and setup logic

--- a/docker-axolotl/Dockerfile
+++ b/docker-axolotl/Dockerfile
@@ -6,11 +6,11 @@ ENV DEBIAN_FRONTEND=noninteractive
 ENV TORCH_CUDA_ARCH_LIST="8.0;8.6;8.9+PTX"
 ENV CUDA_HOME=/usr/local/cuda
 
-# Install system deps including Docker for DinD
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
-    git git-lfs curl wget ca-certificates \
+    curl wget ca-certificates \
     software-properties-common build-essential \
-    ninja-build docker.io \
+    ninja-build \
     python3.11 python3.11-dev python3.11-distutils \
     && rm -rf /var/lib/apt/lists/*
 
@@ -19,18 +19,24 @@ RUN ln -sf /usr/bin/python3.11 /usr/bin/python && \
     curl -sS https://bootstrap.pypa.io/get-pip.py | python
 
 # Set working directory
-WORKDIR /workspace/euthymion/docker-axolotl
+WORKDIR /workspace
 
-# Copy code
-COPY . .
-
-# Install PyTorch (CUDA 12.1) and other dependencies
-RUN pip install --no-cache-dir torch torchvision --index-url https://download.pytorch.org/whl/cu121 && \
-    pip install --no-cache-dir -r requirements.txt && \
-    pip install ./exllamav2
-
-# (Optional) Check that Docker CLI works inside
-RUN docker --version || echo "⚠️ Docker CLI not working — daemon must run externally."
-
-# Default command (you'll override this when running with --entrypoint bash)
-CMD ["bash"]
+# Entrypoint script with Git install + clone + setup
+CMD ["/bin/bash", "-c", "\
+    echo '🚀 Euthymion container started — bootstrapping...'; \
+    if ! command -v git &> /dev/null; then \
+        echo '🛠 Git not found — attempting to install...'; \
+        apt-get update && apt-get install -y git git-lfs || { echo '❌ Failed to install Git'; exit 1; }; \
+    fi; \
+    if [ ! -d '/workspace/euthymion/.git' ]; then \
+        echo '📥 Cloning Euthymion repo...'; \
+        git clone https://github.com/xoaden/euthymion.git /workspace/euthymion || { echo '❌ Git clone failed'; exit 1; }; \
+    else \
+        echo '🔄 Repo already present — pulling latest changes...'; \
+        cd /workspace/euthymion && git pull || { echo '❌ Git pull failed'; exit 1; }; \
+    fi; \
+    cd /workspace/euthymion/docker-axolotl && \
+    chmod +x setup.sh && \
+    ./setup.sh && \
+    echo '✅ Setup complete. Container idle.' && \
+    tail -f /dev/null"]
